<resources>

    <string name="action_settings">Settings</string>
    <string name="image_details_header">Details:</string>
    <string name="image_preview_header">Preview:</string>
    <string name="loading_message">Uploading image. Please wait.</string>

    <string name="Report">Report</string>
    <string name="Authority_Login">Authority Login</string>
    <string name="Dashboard">Dashboard</string>

    <string name="Recent_Updates">Recent Updates</string>
    <string name="cardviewlayout">Card view text</string>
    <string name="tap_on_image_icon_to_upload_images">Tap on the image icon to upload images</string>

    <!--    Report Page     -->
    <string name="viewmap">View Map</string>
    <string name="gallery">Gallery</string>
    <string name="contribute">How can you contribute?</string>
    <string name="aboutministry">About Ministry</string>
    <string name="ngos">NGO\'s </string>
    <string name="sharename">Share</string>
    <string name="sendfeed">Send Feedback</string>
    <string name="Logout">Log out</string>
    <string name="Report_headline">An automated message will be generated to the authorities as per your request</string>
    <string name="Report_belowheadline">What are the problem/problems you have obeserved?-</string>
    <string name="waste_dumping">Waste Dumping</string>
    <string name="Encroachment">Enchroachment</string>
    <string name="RRR">Need of Repair Renovation and Restoration</string>
    <string name="maps">Maps here</string>
    <string name="share">Share your contribution on Facebook\n Note: This might reveal your identity</string>
    <string name="share_below">Please spare sometime to give us ratings for the river condition</string>
    <string name="rating">Proceed for ratings</string>
    <string name="ministry_of_water_and_river">Ministry of Water Resources and River Rejenuvation</string>
    <string name="mapss">Maps</string>
    <string name="visited">Visited</string>
    <string name="labour_on_work">Labour On Work</string>
    <string name="Completion">Completed</string>
    <string name="ministry">Ministry of Water Resources, River Development and Ganga Rejuventaion</string>
    <string name="govt_of_india">Government of India</string>
    <string name="Reportalert">Report!!</string>
    <string name="mapsdata">Know about all the problems near you</string>
    <string name="timeline">Timeline</string>
    <string name="timelinedata">Get live updates on the timeline</string>
    <string name="assesmentriver">Assessment of rivers</string>
    <string name="assesmentriverdata">Know about the cleanest rivers of the country</string>
    <string name="reportdata">Be an aware citizen and contribute to the well being of the rivers by reporting any problems that you witness in or near the rivers</string>

    <string name="Redirecting">Redirecting</string>
    <string name="generateotp">Generate OTP</string>
    <string name="Enterotp">Enter OTP</string>

    <!--  River Rating   -->
    <string name="rating_heading">Please rate the river on the basis of criteria mentioned below</string>
    <string name="value">Value</string>


    <string name="ministry_of_water_resources">Ministry of water resources</string>
    <string name="USERNAME">USERNAME  </string>
    <string name="Password">PASSWORD </string>
    <string name="Login">Login</string>
    <string name="dashboard_via_Login">Not a Authority ! Login As Guest</string>

    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>

    <string name="app_name">Intro Slider</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>


    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="title_activity_navigation_menu">NavigationMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_timeline">UserTimeline</string>

    <string name="Please_Wait">Please Wait..</string>
    <string name="app_id">221239738455521</string>
</resources>