<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.google.sample.cloudvision.EmailActivity"
    >

    <!--<fragment-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="392dp" >-->

    <!--<com.google.android.gms.maps.MapView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:id="@+id/map"-->
        <!--android:layout_weight="3">-->

    <!--</com.google.android.gms.maps.MapView>-->
    <!--</fragment>-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/message"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/gradient"
        android:elevation="16dp"
        android:text="@string/Report"
        android:textAlignment="center"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/mapping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/gradient"
        android:elevation="16dp"
        android:text="@string/maps"
        android:textAlignment="center"
        android:textColor="#ffffff" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/share"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:id="@+id/facebook"/>


    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_below"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textSize="12dp"
        android:textColor="#ffffff"
        android:background="@drawable/gradient"
        android:id="@+id/ratingbutton1"
        />
    </LinearLayout>
    </ScrollView>
</LinearLayout>
