<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.google.sample.cloudvision.DEMO">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollIndicators="right"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Report"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="27dp"
            android:textColor="#ff0000"
            android:text="@string/Report_headline"
            android:textStyle="italic"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:elevation="16dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/Report_belowheadline"
                android:textAlignment="center"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:addStatesFromChildren="false"
                android:duplicateParentState="false"
                android:orientation="vertical"
                android:elevation="8dp">

                <CheckBox
                    android:id="@+id/wasteDumping"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:text="@string/waste_dumping"
                    android:textColor="#000000"/>
                    <!--android:textColor="#ffffff" />-->

                <CheckBox
                    android:id="@+id/encroachment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Encroachment"/>
                    <!--android:textColor="#ffffff" />-->

                <CheckBox
                    android:id="@+id/rrr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/RRR"></CheckBox>
                    <!--android:textColor="#ffffff" />-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/image1"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_weight="1"/>

                    <ImageView
                        android:id="@+id/image2"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:scrollbars="vertical">

                    <ImageView
                        android:id="@+id/image3"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/image4"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_weight="1"></ImageView>
                        <!--android:background="#00796B" />-->

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/getLocation"
            android:text = "Get Location"/>

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/location"/>

        <Button
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:text="Proceed"
            android:id="@+id/proceed"/>
    </LinearLayout>

</ScrollView>