<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/river">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"


        >


        <TextView
            android:id="@+id/logintext"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:layout_marginHorizontal="@dimen/fab_margin"
            android:text="@string/ministry_of_water_resources"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            />

        <ImageView
            android:id="@+id/govt"
            android:layout_width="250dp"
            android:layout_height="150dp"

            android:layout_gravity="center"
            app:srcCompat="@drawable/emblemt" />



        <EditText
            android:id="@+id/username"
            style="@style/editText_Style"
            android:layout_width="313dp"
            android:layout_height="40dp"

            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginHorizontal="11dp"
            android:backgroundTint="#80FFFFFF"
            android:backgroundTintMode="src_in"
            android:drawableStart="@drawable/ic_action_username"
            android:ems="10"
            android:hint="@string/USERNAME"
            android:textAlignment="textStart"

            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="#FFFFFFFF"

            tools:ignore="RtlCompat" />



        <EditText
            android:id="@+id/password"
            style="@style/editText_Style"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:textAlignment="textStart"
            android:layout_gravity="center"
            android:layout_marginHorizontal="7dp"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:autofillHints="@string/bottom_sheet_behavior"
            android:backgroundTint="#80FFFFFF"
            android:drawableLeft="@drawable/ic_action_password"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"

            android:textColor="@color/white"
            android:textColorHint="#FFFFFFFF"
            tools:ignore="RtlCompat" />



        <Button
            android:id="@+id/generateotp"
            style="@style/butt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/generateotp"

            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_via_Login"
            android:id="@+id/guest"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:contextClickable="true"/>




    </LinearLayout>

       <!-- <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"


            android:layout_centerVertical="true">


            <TextView
                android:id="@+id/logintext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="25dp"
                android:layout_marginHorizontal="@dimen/fab_margin"
                android:text="ministry of water resources"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/govt"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/emblem" />

            <EditText
                android:id="@+id/editText2"
                style="@style/editText_Style"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/fab_margin"
                android:ems="10"
                android:hint="USERNAME OR EMAIL ID "
                android:inputType="textEmailAddress"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:ems="10"
                style="@style/editText_Style"
                android:hint="PASSWORD "
                android:textColorHint="#FFFFFF"
                android:autofillHints="@string/bottom_sheet_behavior"
                android:textColor="#ffffff"
                android:layout_marginTop="@dimen/fab_margin"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/login"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="sign in"
                android:textColor="@color/colorPrimaryDark"
                android:textAllCaps="true"

                android:textSize="30sp"

                />




        </LinearLayout>-->

</RelativeLayout>
