<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:aandroid="http://schemas.android.com/tools">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="168dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:expandedTitleMarginStart="72dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/place_image"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/river"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:navigationIcon="@mipmap/ic_launcher"
                app:contentInsetStart="72dp"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/user">


        <LinearLayout
            android:layout_width="275dp"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:padding="8dp"
            android:elevation="16dp"
            android:background="@drawable/gradient"
            android:id="@+id/GuestUser"
            android:layout_marginTop="60dp"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_report_problem_white_48dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Report"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="275dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:elevation="16dp"
            android:background="@drawable/gradient"
            android:layout_gravity="center"

            android:id="@+id/AuthorityLogin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_account_circle_white_48dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:text="@string/Authority_Login"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="20dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="275dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:elevation="16dp"

            android:background="#00796B"
            android:layout_gravity="center"

            android:id="@+id/dashboard">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_account_circle_white_48dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:text="@string/Dashboard"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="20dp"
                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="275dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:elevation="16dp"
            android:background="#00796B"
            android:layout_gravity="center"
            android:id="@+id/RecentUpdates">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_dns_white_48dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:text="@string/Recent_Updates"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="20dp"
                />
        </LinearLayout>





    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
